[metadata]
name = usbcam-gui
version = attr: usbcam-gui.__version__
author = Futa Ogawa
author_email = stu123254@gmail.com
keywords = ["usbcam", "webcam", "GUI", "ubuntu"]
description = usbcam-gui: desc
long_description = file: README.md

[options]
zip_safe = False
#packages = find;
install_requires =
    numpy >= 1.19
    PySide2 >= 5.12.0
    opencv-python >= 4.1.0

[options.packages.find]
where = usbcam-gui


