[metadata]
name = usbcamGUI
version = attr: usbcamGUI.__version__
author = git-oawa
author_email = stu123254@gmail.com
keywords = ["usbcam", "webcam", "GUI", "linux", "pyside2", "opencv"]
description = "GUI for usb camera"
long_description = file: README.md

[options]
zip_safe = False
#packages = find;
#python_requires = >= 3.6
setup_requires = setuptools
install_requires =
    wheel >= 0.36.0
    numpy >= 1.16.0
    pillow >= 5.4.1
    opencv-python >= 4.1.0
    PySide2 >= 5.12.0


[options.entry_points]
#console_scripts =
#    usbcamGUI = usbcamGUI.linux.usbcamGUI


[options.packages.find]
where = usbcamGUI


